welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: reassignment to val
      num=num-i
         ^